@@ -82,8 +82,24 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>it.r2u.animar2u.Launcher</mainClass>
+                                    <manifestEntries>
+                                        <Multi-Release>true</Multi-Release>
+                                        <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>java.base/java.lang.reflect=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>java.base/java.io=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>java.base/java.util=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>javafx.controls/javafx.scene.control=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>javafx.fxml/javafx.fxml=ALL-UNNAMED</Add-Opens>
+                                        <Add-Opens>javafx.graphics/javafx.scene=ALL-UNNAMED</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/javax.imageio.spi.ImageReaderSpi</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/javax.imageio.spi.ImageWriterSpi</resource>
+                                </transformer>
                             </transformers>
                             <finalName>anima-browser-${project.version}</finalName>
                             <filters>
